--- a/listaTarea/src/app/componentes/header/header.component.html
+++ b/listaTarea/src/app/componentes/header/header.component.html
@@ -1,3 +1,4 @@
-
+<header>
     <h1>{{titulo}}</h1>
-
+    <app-boton color="green" text=" Agregar" (btnClick)="agregarTarea()"></app-boton>
+</header>
